Fixed Powerline546EHandler
Signed-off-by: Christoph Weitkamp <github@christophweitkamp.de>